Fix alignwide and alignfull

--- a/content/themes/rolledesign/css/dev/global.css
+++ b/content/themes/rolledesign/css/dev/global.css
@@ -2105,8 +2105,8 @@ pre {
   margin-left: auto;
   margin-right: auto;
   margin-top: 4rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 0;
+  padding-right: 0;
   width: 100%;
 }
 
