--- a/content/themes/rolledesign/sass/layout/_gutenberg.scss
+++ b/content/themes/rolledesign/sass/layout/_gutenberg.scss
@@ -546,8 +546,8 @@ $color-twitter: #1da1f2;
       margin-left: auto;
       margin-right: auto;
       margin-top: 4rem;
-      padding-left: 2rem;
-      padding-right: 2rem;
+      padding-left: 0;
+      padding-right: 0;
       width: 100%;
 
       @media (min-width: 870px) {
